ktp-send-file (15.04.3-1) UNRELEASED; urgency=medium

  * Apply homepage update patch from Matthew Cope
  * Update watch file for KTp's move to Applications
  * Update Diane Trout's email address.
  * New upstream release.
  * Update build-depends for move to KF5 and rename of
    libktpcommoninternalsprivate-dev to libktp-dev
  * Update copyright file, remove po/* block

 -- Diane Trout <diane@debian.org>  Sun, 12 Jul 2015 20:18:24 -0700

ktp-send-file (0.9.0-1) unstable; urgency=medium

  * New upstream release.
  * Update libktpcommoninternalsprivate-dev build-dep to 0.9.0
  * Update copyright file
  * Update Standards-Version to 3.9.6. No changes needed.
  * Update debian/watch file to use http://download.kde.org

 -- Diane Trout <diane@ghic.org>  Sat, 25 Apr 2015 20:11:19 -0700

ktp-send-file (0.8.1-1) unstable; urgency=medium

  * New upstream release.
  * Update Standards-Version to 3.9.5. No changes needed.
  * Update ktp-common-interals and kde-telepathy-data dependencies to 0.8.1
  * Remove fix-send-file.patch merged upstream
  * Update debian/copyright

 -- Diane Trout <diane@ghic.org>  Fri, 16 May 2014 21:06:15 -0700

ktp-send-file (0.7.0-1) unstable; urgency=low

  * New upstream release.
  * Bump ktp-common-internals and kde-telepath-data dependencies to 0.7.0
  * add fix-send-file.patch.
  * Change Recommends: dolphin | konqueror to Enhances: dolphin, konqueror

 -- Diane Trout <diane@ghic.org>  Tue, 29 Oct 2013 22:25:07 -0700

ktp-send-file (0.6.3-1) unstable; urgency=low

  [ Diane Trout ]
  * Imported Upstream version 0.6.2
  * Bump ktp-common-internals and kde-telepath-data dependencies to 0.6.2
  * Bump libtelepathy-qt4-dev dependency to 0.9.3
  * Set Uploaders to Diane Trout and Michał Zając
  * Update Standards-Version to 3.9.4. No changes needed.
  * Update watch file as KDE Telepathy is now in KDE stable.

  [ Mark Purcell ] 
  * Imported Upstream version 0.6.3
  * Add myself to Uploaders