@@ -1,3 +1,2 @@
 usr/bin/ktp-send-file
-usr/share/kde4/services/ServiceMenus/ktp-send-file.desktop
-usr/share/locale/*
+usr/share/kservices5/ServiceMenus/ktp-send-file.desktop
