@@ -7,6 +7,10 @@ ktp-send-file (15.04.3-1) UNRELEASED; urgency=medium
   * Update build-depends for move to KF5 and rename of
     libktpcommoninternalsprivate-dev to libktp-dev
   * Update copyright file, remove po/* block
+  * Use dhmk from pkg-kde-tools to build ktp.
+    - Change maintainer to debian-qt-kde
+    - Update debian/rules
+    - Update paths for new KF5 locations.
 
  -- Diane Trout <diane@debian.org>  Sun, 12 Jul 2015 20:18:24 -0700
 
